Fix padding on mobile, reduce font size

--- a/static/style.css
+++ b/static/style.css
@@ -44,7 +44,7 @@ body {
 
 html {
   background: var(--bg);
-  font-size: 18px;
+  font-size: 19px;
   line-height: 1.5;
 }
 
@@ -52,6 +52,10 @@ html {
   line-height: 1.5;
   font-family: 'Charter';
   font-feature-settings: normal;
+}
+
+.content {
+  margin: auto 5% auto 5%; 
 }
 
 .pull-right > p {
@@ -170,6 +174,10 @@ pre {
     grid-row: 1;
   }
 
+  html {
+    font-size: 21px;
+  }
+
   .sep {
     display: hidden;
   }
@@ -179,9 +187,8 @@ pre {
     grid-row: 1;
   }
   .content {
-    margin: 0 auto;
+    margin: 0%;
   }
-  
   
   .openring {
     display: grid;
@@ -215,10 +222,6 @@ pre {
   }
   .content {
     margin: 0 auto;
-  }
-
-  html {
-    font-size: 19px;
   }
 
   .openring {
